1. Fix import overwrite flag 2. Resize node-data textarea 3. Don't collapse tree on modify

--- a/exhibitor-core/src/main/resources/com/netflix/exhibitor/core/ui/css/exhibitor.css
+++ b/exhibitor-core/src/main/resources/com/netflix/exhibitor/core/ui/css/exhibitor.css
@@ -593,7 +593,7 @@ fieldset
 
 #node-data
 {
-    resize: none;
+    /*resize: none;*/
 }
 
 .optional
